windows naming fix part 2

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="gallery-picture">
               <div class="mySlides item-1">
                 <div class="numbertext">1 / 10</div>
-                  <img class="gallery-img" src="assets/galeria/1.JPG" alt="Nissan 300zx twin turbo">
+                  <img class="gallery-img" src="assets/galeria/1.jpg" alt="Nissan 300zx twin turbo">
               </div>
 
               <div class="mySlides">
                 <div class="numbertext">2 / 10</div>
-                  <img class="gallery-img" src="assets/galeria/2.JPG" alt="Nissan 300zx twin turbo">
+                  <img class="gallery-img" src="assets/galeria/2.jpg" alt="Nissan 300zx twin turbo">
               </div>
 
               <div class="mySlides">
@@ -168,10 +168,10 @@
           <!-- Thumbnail images -->
           <div class="row">
             <div class="column">
-              <img class="demo cursor" src="assets/galeria/1.JPG" style="width:100%" onclick="currentSlide(1)" alt="Nissan 300zx twin turbo">
+              <img class="demo cursor" src="assets/galeria/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Nissan 300zx twin turbo">
             </div>
             <div class="column">
-              <img class="demo cursor" src="assets/galeria/2.JPG" style="width:100%" onclick="currentSlide(2)" alt="Nissan 300zx twin turbo">
+              <img class="demo cursor" src="assets/galeria/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Nissan 300zx twin turbo">
             </div>
             <div class="column">
               <img class="demo cursor" src="assets/galeria/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mercedes 450sl z 1971r">
